--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Ibarra Real Nova", serif;
 }
 
 a {
@@ -12,5 +12,143 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
+.home {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 350px 1fr;
+      grid-template-columns: 350px 1fr;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  font-weight: 800;
+}
+
+p {
+  margin: 0;
+}
+
+aside {
+  position: relative;
+  padding: 2rem;
+  background: white;
+  background: linear-gradient(135deg, white 55%, rgba(248, 228, 255, 0.5) 100%);
+  -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 0 35px rgba(0, 0, 0, 0.12);
+}
+
+aside:before {
+  content: "";
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  width: 0px;
+  height: 0px;
+  border-top: 80px solid #e2d0f9;
+  border-right: 80px solid transparent;
+  opacity: 0.25;
+}
+
+aside:after {
+  content: "";
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  width: 0px;
+  height: 0px;
+  border-bottom: 79px solid #fff;
+  border-left: 79px solid transparent;
+  -webkit-box-shadow: 20px 10px 30px #fff;
+  box-shadow: 20px 10px 30px #fff;
+  z-index: 10;
+}
+
+aside h1 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+aside h2 {
+  padding: 0.5rem 0;
+}
+
+aside .header-anchor:hover * {
+  color: #e2d0f9;
+  font-weight: 700;
+}
+
+aside ul {
+  margin: 0;
+}
+
+aside ul a li {
+  position: relative;
+  padding: 0.5rem 0;
+  font-weight: 500;
+}
+
+aside ul a:hover li {
+  color: #e2d0f9;
+}
+
+.sakura {
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  bottom: -30%;
+  right: -30%;
+  background: #fff;
+}
+
+main {
+  background-color: #fff;
+  height: 100vh;
+}
+
+.main-content {
+  position: relative;
+  overflow: hidden;
+}
+
+.main-content {
+  padding: 0 3rem;
+}
+
+.section {
+  padding: 2rem 0;
+  position: inherit;
+  z-index: 10;
+}
+
+.section h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  border-left: 0.4rem solid #e2d0f9;
+  padding-left: 1.2rem;
+}
+
+.section p {
+  padding: 2rem;
+  background: #fff;
+  border-radius: 15px;
+  font-size: 1.35rem;
+  line-height: 1.6;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);
+}
+
+.section p::first-letter {
+  font-size: 150%;
+  font-weight: bold;
+  padding-right: 5px;
+  line-height: 1;
+}
+/*# sourceMappingURL=globals.css.map */
